--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -1,67 +1,3 @@
-<head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Ranchers&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');
-
-        body {
-            background-color: #efeee7;
-            color: #333;
-        }
-
-        h1 {
-            font-family: Ranchers;
-            text-align: center;
-            background-color: #666;
-            color: #efeee7;
-        }
-
-        .card-title {
-            font-size: 32px;
-        }
-
-        .card-subtitle {
-            font-size: 24px;
-        }
-
-        .card-text {
-            margin-top: 16px;
-        }
-
-        .card {
-            text-align: center;
-            font-family: Inconsolata;
-        }
-
-        #input-list {
-            height: 38px;
-        }
-
-        #submit-btn #clear-btn {
-            margin-bottom: 5px;
-        }
-
-        #list {
-            background-color: white;
-        }
-
-        #list-items {
-            list-style: none;
-        }
-
-        li {
-            justify-content: center;
-        }
-
-        .complete-button {
-          margin: 16px;
-        }
-  </style>
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-    crossorigin="anonymous"
-  ></script>
-</head>
 <!-- Header -->
 <header class="container-fluid">
   <div class="row">
@@ -107,8 +43,10 @@
           <ul id="list-items">
             {{#each item}}
               <li>
-                {{this.item}}
-                <button class="btn btn-success complete-button">
+                <div data-id={{this.id}} class="item-div">
+                  {{this.item}}
+                </div>
+                <button type="submit" class="btn btn-success complete-button">
                   Complete
                 </button>
               </li>
