--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -45,7 +45,7 @@
                 {{this.item}}
               </div>
               <button type="submit" class="btn btn-success complete-button">
-                Complete
+                <i class="fa fa-check"></i>
               </button>
             </li>
             {{/each}}
