--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -58,3 +58,21 @@ li {
 .item-div {
   display: inline-block;
 }
+
+@media screen and (max-width: 770px) {
+  .card-title {
+    font-size: 24px;
+  }
+
+  .card-subtitle {
+    font-size: 16px;
+  }
+
+  .card-text {
+    margin-top: 8px;
+  }
+  #input-list {
+    height: 30px;
+    width: 150px;
+  }
+}
